# urlshrtn

./: README.md  pyproject.toml
urlshorten/: __init__.py  config.cfg  crud.py  models.py  routes.py  utils.py
urlshorten/data/: database.sqlite
urlshorten/templates/: 404.html  index.html
